--- a/LungDiseaseDiagnosis/Components/_Imports.razor
+++ b/LungDiseaseDiagnosis/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using LungDiseaseDiagnosis
 @using LungDiseaseDiagnosis.Components
+@using Arora.Blazor.StateContainer
+@inject StateContainer StateContainer
