--- a/LungDiseaseDiagnosis/Components/Layout/MainLayout.razor
+++ b/LungDiseaseDiagnosis/Components/Layout/MainLayout.razor
@@ -1,21 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<NavMenu />
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+@Body
+@code{
+    protected override void OnInitialized() => StateContainer.OnChange += StateHasChanged;
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
-
+}
 <div id="blazor-error-ui" data-nosnippet>
     An unhandled error has occurred.
     <a href="." class="reload">Reload</a>
