--- a/LungDiseaseDiagnosis/Components/Layout/NavMenu.razor
+++ b/LungDiseaseDiagnosis/Components/Layout/NavMenu.razor
@@ -1,30 +1,87 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+@using LungDiseaseDiagnosis.Models
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@using System.Security.Cryptography
+@using LungDiseaseDiagnosis.Services
+@inject ProtectedLocalStorage ProtectedLocalStorage
+@inject NavigationManager NavigationManager
+@inject IUserService UserService
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">LungDiseaseDiagnosis</a>
+        <a class="navbar-brand" href="/">MedAI Diagnostics</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                @if (user != null)
+                {
+                    <li class="nav-item">
+                        <a class="nav-link" href="/settings">
+                            <span class="navbar-text text-black me-3">Welcome, @user.Name (@user.Type)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-link nav-link" @onclick="Logout">Logout</button>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <NavLink class="nav-link" href="/login">Login</NavLink>
+                    </li>
+                    <li class="nav-item">
+                        <NavLink class="nav-link" href="/signup">Sign Up</NavLink>
+                    </li>
+                }
+            </ul>
+        </div>
     </div>
-</div>
+</nav>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+@code {
+    private User? user;
+    protected override void OnInitialized()
+    {
+        StateContainer.OnChange += StateHasChanged;
+    }
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            if (UserService.CurrentUser == null)
+            {
+                try
+                {
+                    var result = await ProtectedLocalStorage.GetAsync<User>("user");
+                    if (result.Success)
+                    {
+                        UserService.CurrentUser = result.Value;
+                    }
+                }
+                catch (CryptographicException)
+                {
+                    // This can happen during prerendering, just ignore it.
+                }
+            }
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
+            user = UserService.CurrentUser;
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
+            if (user == null)
+            {
+                NavigationManager.NavigateTo("/login");
+            }
+            else
+            {
+                StateHasChanged();
+            }
+        }
+    }
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
+    private async Task Logout()
+    {
+        await ProtectedLocalStorage.DeleteAsync("user");
+        NavigationManager.NavigateTo("/", forceLoad: true);
+    }
+}
