--- a/LungDiseaseDiagnosis/Components/Layout/NavMenu.razor
+++ b/LungDiseaseDiagnosis/Components/Layout/NavMenu.razor
@@ -2,6 +2,8 @@
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using System.Security.Cryptography
 @using LungDiseaseDiagnosis.Services
+@using Microsoft.AspNetCore.Components.Authorization
+
 @inject ProtectedLocalStorage ProtectedLocalStorage
 @inject NavigationManager NavigationManager
 @inject IUserService UserService
@@ -9,8 +11,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">MedAI Diagnostics</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -19,7 +20,7 @@
                 {
                     <li class="nav-item">
                         <a class="nav-link" href="/settings">
-                            <span class="navbar-text text-black me-3">Welcome, @user.Name (@user.Type)</span>
+                            <span class="navbar-text me-3">Welcome, @user.Name (@user.Type)</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -29,10 +30,10 @@
                 else
                 {
                     <li class="nav-item">
-                        <NavLink class="nav-link" href="/login">Login</NavLink>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
                     <li class="nav-item">
-                        <NavLink class="nav-link" href="/signup">Sign Up</NavLink>
+                        <a class="nav-link" href="/signup">Sign Up</a>
                     </li>
                 }
             </ul>
@@ -42,46 +43,28 @@
 
 @code {
     private User? user;
-    protected override void OnInitialized()
+
+    protected override async Task OnInitializedAsync()
     {
-        StateContainer.OnChange += StateHasChanged;
-    }
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
+        try
         {
-            if (UserService.CurrentUser == null)
+            var result = await ProtectedLocalStorage.GetAsync<User>("user");
+            if (result.Success)
             {
-                try
-                {
-                    var result = await ProtectedLocalStorage.GetAsync<User>("user");
-                    if (result.Success)
-                    {
-                        UserService.CurrentUser = result.Value;
-                    }
-                }
-                catch (CryptographicException)
-                {
-                    // This can happen during prerendering, just ignore it.
-                }
+                user = result.Value;
+                UserService.CurrentUser = user;
             }
-
-            user = UserService.CurrentUser;
-
-            if (user == null)
-            {
-                NavigationManager.NavigateTo("/login");
-            }
-            else
-            {
-                StateHasChanged();
-            }
+        }
+        catch (CryptographicException)
+        {
+            // This can happen during prerendering, just ignore it.
         }
     }
 
     private async Task Logout()
     {
         await ProtectedLocalStorage.DeleteAsync("user");
+        UserService.CurrentUser = null;
         NavigationManager.NavigateTo("/", forceLoad: true);
     }
 }
